refactor: ChatMessageResource.kt 수정 - 수신 발신시 로그 추가

--- a/src/main/resources/application-local.yaml
+++ b/src/main/resources/application-local.yaml
@@ -6,3 +6,8 @@ spring:
       transport: websocket
       port: 8080
       mapping-path: /message-service
+
+logging:
+  level:
+    talk:
+      messageService: DEBUG
