test: 테스트 코드 수정

--- a/src/test/resources/application-test.yaml
+++ b/src/test/resources/application-test.yaml
@@ -7,3 +7,8 @@ spring:
       port: 8080
       address: localhost
       mapping-path: /message-service
+
+logging:
+  level:
+    talk:
+      messageService: DEBUG
