chore: reative-mongo-client 추가

--- a/src/main/resources/application-local.yaml
+++ b/src/main/resources/application-local.yaml
@@ -6,7 +6,9 @@ spring:
       transport: websocket
       port: 8080
       mapping-path: /message-service
-
+  data:
+    mongodb:
+      uri: "mongodb://admin:password@localhost:27017/message_service"
 logging:
   level:
     talk:
