test: 테스트 코드 수정

--- a/src/test/resources/application-test.yaml
+++ b/src/test/resources/application-test.yaml
@@ -12,3 +12,7 @@ logging:
   level:
     talk:
       messageService: DEBUG
+    org:
+      springframework:
+        data:
+          mongodb: DEBUG
