--- a/src/test/resources/application-test.yaml
+++ b/src/test/resources/application-test.yaml
@@ -1,6 +1,7 @@
 spring:
   main:
     lazy-initialization: true
+    allow-bean-definition-overriding: true
   rsocket:
     server:
       transport: websocket
